--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Aniversario da namorada</button>
-                <button class="botao">Se formar</button>
                 <button class="botao">Vestibulares</button>
+                <button class="botao">Se formar</button>
                 <button class="botao">Atualizar meu currículo</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Comprar presentes e organizar festa</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para me preparar</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -42,8 +42,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Concluir o 3 Ano e se formar</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Entrar na faculdade</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Enem / Vestibular UFT</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
@@ -64,8 +64,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Entrar na faculdade</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Concluir o 3 Ano e se formar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo restante para acabar a escola</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias2"></p>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com o curso da faculdade</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Adicionar em meu curriculo meu curso</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
