--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Aniversario da namorada</button>
+                <button class="botao ativo">Aniversario da minha namorada</button>
                 <button class="botao">Vestibulares</button>
                 <button class="botao">Se formar</button>
                 <button class="botao">Atualizar meu currículo</button>
@@ -86,8 +86,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Adicionar em meu curriculo meu curso</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Adicionar o curso em meu curriculo</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Atualização do curriculo em:</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
@@ -109,7 +109,6 @@
                 </div>
             </div>
         </div>
-    </section>
     <script src="main.js"></script>
 </body>
 
